# az-document-rag-model-demo

./: .env-example  .gitignore  Makefile  README.md  docker-compose.yml  requirements.txt
backend/: pyproject.toml
backend/src/: .env-example  main.py  settings.py  test.py
backend/src/core/: app.py
backend/src/modules/db/driver/: __init__.py  azure_cosmos_client.py  weaviate_client.py
backend/src/modules/db/driver/abs/: __init__.py  core.py
backend/src/modules/db/repository/: __init__.py  core.py  wv_repo.py
backend/src/modules/nlp/: __init__.py  abs.py  document.py  text_process.py
backend/src/modules/openai/: __init__.py  abs.py  core.py  embedding.py  retriever.py  vectorize.py
backend/src/modules/rag/: __init__.py  context.py  mime.py
backend/src/modules/rag/deprecated/: embedding.py
backend/src/modules/schema/models/: core.py
backend/src/modules/stock/: models.py  vectorize.py
backend/src/routes/: core.py  eventhub.py  rag.py
backend/src/routes/models/: rag.py
backend/src/services/: __init__.py  eventhub_service.py
backend/src/services/lang/: __init__.py  conversation.py  embeddings.py  retrieving.py  store_embeddings.py
backend/src/services/stock/: test.ipynb  wv_data_loader.py  wv_schema_registry.py
backend/tests/: test_db.py  test_db_repo.py  test_nlp.py  test_route.py
frontend/src/: app.py  settings.py
frontend/src/pages/: 1_general_conversation.py  1_test_conversation.py  2_rag_search.py  3_upload_document.py
